5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1836_1277.log
== TEST (2019-06-25 11:37:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))/111)-1
y= (int(unput("cidade2: "))/111)-1
print(m(x,y))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))/111)-1
y= (int(input("cidade2: "))/111)-1
print(m(x,y))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))/111)-1
y= (int(input("cidade2: "))/111)-1
print(x)
print(y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))//111)-1
y= (int(input("cidade2: "))//111)-1
print(x)
print(y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))//111)-1
y= (int(input("cidade2: "))//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:40:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))/111)-1
y= (int(input("cidade2: "))/111)-1
print(x)
print(y)
#print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:41:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x= (int(input("cidade1: "))//111)-1
y= (int(input("cidade2: "))//111)-1
#print(x)
#print(y)
#print(m[x,y])
print(m[1,3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:42:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x1= int(input("cidade1: ")
y1= int(input("cidade2: ")
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
File "XXXX", line 11
    y1= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:43:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[1,3])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array([[0,2,11,6,15,11,1],
	  [2,0,7,13,4,2,15],
	  [11,7,0,11,8,3,13],
	  [6,12,11,0,10,2,1],
	  [15,4,8,10,0,5,13],
	  [11,2,3,1,5,0,14],
	  [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array([[0,2,11,6,15,11,1],
	      [2,0,7,13,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array([[0,2,11,6,15,11,1],
	      [2,0,7,13,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:46:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1= int(input("cidade1: "))
y1= int(input("cidade2: "))
x=(x1//111)-1
y=(y1//111)-1
#print(x)
#print(y)
print(m[x,y])


-- EXECUTION TIME:
1.27211
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
